--- a/index.html
+++ b/index.html
@@ -220,6 +220,42 @@
             <button onclick="actualizarResumenSeaPeriodo()" class="btn-actualizar-sea-periodo">
                 <span>🔄</span> Actualizar Resumen
             </button>
+                            <button onclick="agregarDatosPrueba()" class="btn-agregar-datos-prueba" style="background: linear-gradient(135deg, #f59e0b 0%, #d97706 100%);">
+                    <span>🔄</span> Sincronizar Datos
+                </button>
+                <button onclick="testearDatos()" class="btn-agregar-datos-prueba" style="background: linear-gradient(135deg, #dc2626 0%, #b91c1c 100%); margin-left: 10px;">
+                    <span>🧪</span> Testear Datos
+                </button>
+                               <button onclick="generarDatosReales()" class="btn-agregar-datos-prueba" style="background: linear-gradient(135deg, #059669 0%, #047857 100%); margin-left: 10px;">
+                   <span>📝</span> Generar Datos Reales
+               </button>
+               <button onclick="diagnosticarEstudianteEspecifico()" class="btn-agregar-datos-prueba" style="background: linear-gradient(135deg, #7c3aed 0%, #6d28d9 100%); margin-left: 10px;">
+                   <span>🔍</span> Diagnosticar Estudiante
+               </button>
+               <button onclick="limpiarYRegenerarDatos()" class="btn-agregar-datos-prueba" style="background: linear-gradient(135deg, #ea580c 0%, #dc2626 100%); margin-left: 10px;">
+                   <span>🧹</span> Limpiar y Regenerar
+               </button>
+               <button onclick="restaurarDatosOriginales()" class="btn-agregar-datos-prueba" style="background: linear-gradient(135deg, #0891b2 0%, #0e7490 100%); margin-left: 10px;">
+                   <span>🔄</span> Restaurar Datos
+               </button>
+               <button onclick="verificarDatosExistentes()" class="btn-agregar-datos-prueba" style="background: linear-gradient(135deg, #059669 0%, #047857 100%); margin-left: 10px;">
+                   <span>🔍</span> Verificar Datos
+               </button>
+               <button onclick="ingresarDatosManualmente()" class="btn-agregar-datos-prueba" style="background: linear-gradient(135deg, #7c2d12 0%, #92400e 100%); margin-left: 10px;">
+                   <span>✏️</span> Ingresar Manual
+               </button>
+               <button onclick="diagnosticarTrabajoCotidiano()" class="btn-agregar-datos-prueba" style="background: linear-gradient(135deg, #1e40af 0%, #1d4ed8 100%); margin-left: 10px;">
+                   <span>📚</span> Diag. Trabajo
+               </button>
+               <button onclick="diagnosticarPruebas()" class="btn-agregar-datos-prueba" style="background: linear-gradient(135deg, #be185d 0%, #a21caf 100%); margin-left: 10px;">
+                   <span>🧪</span> Diag. Pruebas
+               </button>
+               <button onclick="sincronizarPorcentajesFinales()" class="btn-agregar-datos-prueba" style="background: linear-gradient(135deg, #059669 0%, #047857 100%); margin-left: 10px;">
+                   <span>📊</span> Sincronizar %
+               </button>
+               <button onclick="actualizarResumenSeaPeriodo()" class="btn-agregar-datos-prueba" style="background: linear-gradient(135deg, #dc2626 0%, #b91c1c 100%); margin-left: 10px;">
+                   <span>🔄</span> Usar % Directos
+               </button>
         </div>
 
         <div class="sea-periodo-content">
