--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
             <button onclick="scrollToMenu()" class="btn-volver-menu">
                 <span>🏠</span> Volver al Menú
             </button>
-            <button onclick="renderSeaPeriodo()" class="btn-actualizar-sea" style="background: linear-gradient(135deg, #f59e0b 0%, #d97706 100%); color: white; border: none; padding: 8px 12px; border-radius: 4px; cursor: pointer; margin-left: 5px;">
+            <button onclick="actualizarResumenSeaPeriodo(true)" class="btn-actualizar-sea" style="background: linear-gradient(135deg, #f59e0b 0%, #d97706 100%); color: white; border: none; padding: 8px 12px; border-radius: 4px; cursor: pointer; margin-left: 5px;">
                 <span>🔄</span> Actualizar Resumen
             </button>
             <button onclick="exportarSeaPeriodo()" class="btn-exportar-resumen">
