--- a/index.html
+++ b/index.html
@@ -54,23 +54,23 @@
 
     <div class="actions-bar">
         <div class="actions-right">
-            <button onclick="descargarPlantilla()" title="Descarga una plantilla de ejemplo en Excel">
+                            <button onclick="descargarPlantilla()">
                 <span>📄</span> Descargar plantilla
             </button>
             <input type="file" id="inputExcel" accept=".xlsx" style="display:none" onchange="cargarPlantilla(event)">
-            <button onclick="document.getElementById('inputExcel').click()" title="Importa datos desde un archivo Excel (.xlsx)">
+                            <button onclick="document.getElementById('inputExcel').click()">
                 <span>📥</span> Importar Excel
             </button>
-            <button onclick="exportarDatos()" title="Exporta los datos actuales a Excel">
+                            <button onclick="exportarDatos()">
                 <span>📤</span> Exportar Excel
             </button>
-            <button onclick="guardarDatosManual()" title="Guarda los datos manualmente">
+                            <button onclick="guardarDatosManual()">
                 <span>💾</span> Guardar datos
             </button>
-            <button onclick="agregarEstudiante()" title="Agrega un nuevo estudiante">
+                            <button onclick="agregarEstudiante()">
                 <span>📝</span> Agregar estudiante
             </button>
-            <button onclick="ordenarEstudiantesManual()" title="Ordena la lista de estudiantes por primer apellido" class="btn-agregar-est">
+                            <button onclick="ordenarEstudiantesManual()" class="btn-agregar-est">
                 <span>🔤</span>  Ordenar estudiantes
             </button>
         </div>
@@ -143,12 +143,12 @@
             <button onclick="scrollToMenu()" class="btn-volver-menu">
                 <span>🏠</span> Volver al Menú
             </button>
-            <input type="number" id="inputEliminarEst" min="1" max="50" placeholder="N° estu" title="Número de estudiante a eliminar">
-            <button onclick="eliminarEstudiantePorNumero()" class="btn-eliminar-est" title="Eliminar estudiante por número">
+            <input type="number" id="inputEliminarEst" min="1" max="50" placeholder="N° estu">
+                            <button onclick="eliminarEstudiantePorNumero()" class="btn-eliminar-est">
                 <span>🗑️</span> Eliminar estudiante
             </button>
             <label for="alertaTempranaInput">% Alerta temprana:</label>
-            <input type="number" id="alertaTempranaInput" min="0" max="10" value="2" step="1" title="Porcentaje para activar alerta temprana (0-10)">
+            <input type="number" id="alertaTempranaInput" min="0" max="10" value="2" step="1">
         </div>
         <div class="table-wrapper">
             <div class="table-responsive">
@@ -177,7 +177,7 @@
             <button onclick="agregarIndicador()" class="btn-agregar-indicador">
                 <span>➕</span> Agregar Indicador
             </button>
-            <input type="number" id="inputEliminarIndicador" min="1" max="50" placeholder="N° indicador" title="Número de indicador a eliminar" style="width: 120px; margin-right: 5px;">
+            <input type="number" id="inputEliminarIndicador" min="1" max="50" placeholder="N° indicador" style="width: 120px; margin-right: 5px;">
             <button onclick="eliminarIndicador()" class="btn-eliminar-indicador">
                 <span>🗑️</span> Eliminar Indicador
             </button>
@@ -224,9 +224,9 @@
 
             <div class="escala-config">
                 <label for="escalaMaximaInput">Escala máxima:</label>
-                <input type="number" id="escalaMaximaInput" min="1" max="10" value="3" step="1" title="Escala máxima de evaluación (ej: 3 para escala 0-3)">
+                <input type="number" id="escalaMaximaInput" min="1" max="10" value="3" step="1">
                 <label for="valorTotalTrabajoInput">Valor total:</label>
-                <input type="number" id="valorTotalTrabajoInput" min="1" max="100" value="35" step="1" title="Valor total del trabajo cotidiano para calcular porcentaje final">
+                <input type="number" id="valorTotalTrabajoInput" min="1" max="100" value="35" step="1">
             </div>
         </div>
 
@@ -365,7 +365,7 @@
 
         <div class="nota-aprobacion-config">
             <label for="notaAprobacionInput">Nota de aprobación (%):</label>
-            <input type="number" id="notaAprobacionInput" min="0" max="100" value="70" step="1" title="Nota mínima para aprobar (porcentaje)" onchange="actualizarNotaAprobacion()">
+            <input type="number" id="notaAprobacionInput" min="0" max="100" value="70" step="1" onchange="actualizarNotaAprobacion()">
         </div>
 
         <div id="sea-periodo-content" class="content-section"></div>
